--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>kazinvest-front</title>
+    <title>Интерактивная карта Специальных экономических и Индустриальных зон Республики Казахстан</title>
   </head>
   <body>
     <noscript>
